--- a/shelter/assets/sass/_layout-parts.scss
+++ b/shelter/assets/sass/_layout-parts.scss
@@ -41,7 +41,7 @@
                 margin-left: 4px;
             }
         }
-        .menu{
+        .menu-desktop{
             margin-left: auto;
             ul.menu-list{
                 display: flex;
@@ -77,6 +77,58 @@
                 }
             }
         }
+        .menu-mobile{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: fixed;
+            right: 0px;
+            top: 0px;
+            bottom: 0px;
+            width: 320px;
+            background-color: $color-dark-3xl;
+            transform: translate(100%);
+            transition-property: transform;
+            transition-duration: 0.2s;
+            ul.menu-list{
+                display: flex;
+                flex-direction: column;
+                align-items: center; 
+                justify-content: space-between;
+                width: 243px;
+                height: 327px;
+                a{
+                    @include arialNormalNormal;
+                    font-size: 28px;
+                    line-height: 160%;
+                    letter-spacing: 0.01rem;
+                    color:$color-dark-s;
+                    height: auto;
+                    &:hover{
+                        color:$color-light-s;
+                    }
+                    &:active{
+                        border-bottom: 3px solid $color-primary;
+                    }
+                    transition-property: color, border-bottom;
+                    transition-duration: 0.3s, 0.1s;
+                }
+                a.activeMain{
+                    color:$color-light-s;
+                    border-bottom: 3px solid $color-primary;
+                    cursor:default;
+                }
+                a.activePets{
+                    color:$color-dark-3xl;
+                    border-bottom: 3px solid $color-primary;
+                    cursor:default;
+                }
+            }
+
+            &_opened{
+                transform: translate(0%);
+            }
+        }
         .burger{
             display: none;
             width: 30px;
@@ -84,13 +136,18 @@
             align-items: center;
             background-image: url("../../assets/icons/burger.png");
             z-index: 3;
+            transition-property: transform;
+            transition-duration: 0.2s;
+            &_opened{
+                transform: rotate(90deg);
+            }
         }
         @media screen and (max-width: 992px) {
             margin: 0 30px;
         }
         @media screen and (max-width: 767px) {
             margin: 0 20px;
-            .menu{
+            .menu-desktop{
                 display: none;
             }
             .burger{
