--- a/shelter/assets/sass/_layout-parts.scss
+++ b/shelter/assets/sass/_layout-parts.scss
@@ -41,6 +41,16 @@
                 margin-left: 4px;
             }
         }
+
+        .backLayer{
+            position: fixed;
+            top: 0;
+            right: 0;
+            height: 100%;
+            width: 100%;
+            background-color: rgba($color: #000000, $alpha: 0.6);
+        }
+
         .menu-desktop{
             margin-left: auto;
             ul.menu-list{
