feat: implement the mobile menu for the second page

--- a/shelter/assets/sass/our-pets.scss
+++ b/shelter/assets/sass/our-pets.scss
@@ -16,7 +16,7 @@ header{
             color:$color-dark-3xl;
         }
     }
-    nav.menu{
+    nav.menu-desktop{
         ul.menu-list{
             a{
                 color:$color-dark-l;
