--- a/shelter/assets/sass/_layout-parts.scss
+++ b/shelter/assets/sass/_layout-parts.scss
@@ -123,7 +123,7 @@
                     cursor:default;
                 }
                 a.activePets{
-                    color:$color-dark-3xl;
+                    color:$color-light-s;
                     border-bottom: 3px solid $color-primary;
                     cursor:default;
                 }
